--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
 
-<button class="btn btn-primary float-end"> <a href="#top" style="color: white">ᐃ</a> </button>
+<button class="btn btn-primary float-end"> <a href="#top" style="color: white">↑</a> </button>
 <footer id="xd-footer">
 		<div class="container">
 			<div class="row justify-content-between">
