--- a/index.html
+++ b/index.html
@@ -100,10 +100,9 @@
 		<article class="col-md-2"></article>
 		</div>
 	</div>
-
-
-
+		<div>
 <button class="btn btn-primary float-end"> <a href="#top" style="color: white">↑</a> </button>
+		</div>
 <footer id="xd-footer">
 		<div class="container">
 			<div class="row justify-content-between">
