--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 		 		<img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
  		     		<p id="c"> Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia.</p>
 			</article>
-
 		<article class="col-md-2"></article>
+			<div class="row justify-content-end"><button class="btn btn-primary float-end"> <a href="#top" style="color: white">↑</a> </button> </div>
 		</div>
-	<button class="btn btn-primary float-end"> <a href="#top" style="color: white">↑</a> </button>
+
 	</div>
 		
 		
