--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 	   			<div class="box-shadow">
 				<img class="img-fluid" class="img-responsive" src="images/apt1.jpg">
 	    			</div>
-     				<p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>
+     				<p id="c">2801 W Atkinson St - 2 bedroom</p>
     			</article>
 			<article class="col-md-2"></article>
     			<aside class="col-md-4">
 	    			<div class="box-shadow">
 	    				<img class="img-fluid" class="img-responsive" src="images/apt2.jpg">
 	    			</div>
-				<p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>   
+				<p id="c">2901 W Atkinson St - Studio, 1 Bedroom</p>   
 	 		</aside>
 	    	<article class="col-md-1"></article>
  		</div>
@@ -77,14 +77,14 @@
 	    			<div class="box-shadow">
 					<img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
 	   			 </div>
-      				<p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>
+      				<p id="c">4446 N 28th St - Studio, 1 Bedroom, 2 Bedroom</p>
     			</article>
 	    		<article class="col-md-2"></article>
     			<aside class="col-md-4">
 	   			<div class="box-shadow">
 	    				<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
 	   			 </div>
-				 <p id="c">Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia. It is owned and operated by Village Roadshow's Theme Parks division. After a star-studded opening ceremony on 2 June 1991, the park opened the following day. Many park attractions are based on Warner Bros. and related DC Comics properties, including thrill rides such as Batwing Spaceshot and Superman Escape, family attractions such as Justice League: Alien Invasion 3D and Wild</p>   
+				 <p id="c">4505 N 29th St - 1 Bedroom, 2 Bedroom</p>   
 	  		</aside>
 	    		<article class="col-md-1"></article>
   		</div>
@@ -94,9 +94,9 @@
 		<div class="row">
 			<article class="col-md-2"></article>
 			<article class="col-md-8">
+				<p id="c"> All buildings are some of the nicest in the neighborhood, featuring security systems, on site managers, and daily upkeep. Each property has a large lawn, often spacious units, and long term residents.</p>
 		 		<img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
- 		     		<p id="c"> Warner Bros. Movie World is a theme park on the Gold Coast in Queensland, Australia.</p>
-			</article>
+ 		     		</article>
 		<article class="col-md-2"></article>
 		</div>
 	<button class="btn btn-primary float-end"> <a href="#top" style="color: white">↑</a> </button>
@@ -106,8 +106,8 @@
 <footer id="xd-footer">
 		<div class="container">
 			<div class="row justify-content-between">
-				<div class="col-md-2">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
-				<div class="col-md-2">stuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes herestuff goes here stuff goes here</div>
+				<div class="col-md-2">stuff goes here stuff goes here</div>
+				<div class="col-md-2">stuff goes here stuff goes here</div>
 			</div>
 		</div>
 		<div class="container">
