--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 <footer id="xd-footer">
 		<div class="container">
 			<div class="row justify-content-between">
-				<div class="col-md-2">stuff goes here stuff goes here</div>
-				<div class="col-md-2">stuff goes here stuff goes here</div>
+				<div class="col-md-2" style="text-align:center;">stuff goes here stuff goes here</div>
+				<div class="col-md-2" style="text-align:center;">stuff goes here stuff goes here</div>
 			</div>
 		</div>
 		<div class="container">
