--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
  		     		</article>
 		<article class="col-md-2"></article>
 		</div>
-	<button class="btn btn-primary float-end"> <a href="#top" style="color: white text-decoration:none" >↑</a> </button>
+	<button class="btn btn-primary float-end"> <a href="#top" style="color: white" "text-decoration:none">↑</a> </button>
 	</div>
 		
 		
