--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
  		     		</article>
 		<article class="col-md-2"></article>
 		</div>
-	<button class="btn btn-primary float-end"> <a href="#top" style="color: white" "text-decoration:none">↑</a> </button>
+	
 	</div>
 		
-		
+<button class="btn btn-primary float-end"> <a href="#top" style="color: white">↑</a> </button>
 <footer id="xd-footer">
 		<div class="container">
 			<div class="row justify-content-between">
