--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
 <button class="btn btn-primary float-end"> <a href="#top" style="color: white">↑</a> </button>
 		<div class="container">
 			<div class="row justify-content-between">
-				<div class="col-md-2" style="text-align:center;">stuff goes here stuff goes here</div>
-				<div class="col-md-2" style="text-align:center;">stuff goes here stuff goes here</div>
+				<div class="col-md-6" style="text-align:center;">stuff goes here stuff goes here</div>
+				<div class="col-md-6" style="text-align:center;">stuff goes here stuff goes here</div>
 			</div>
 		</div>
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-2 align-self-end" style="text-align:center;">Copyright</div>
+				<div class="col-2" style="text-align:center;">Copyright</div>
 				</div>
 		</div>
 </footer>
