--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
 			<article class="col-md-2"></article>
 			<article class="col-md-8">
 				<p id="c"> All buildings are some of the nicest in the neighborhood, featuring security systems, on site managers, and daily upkeep. Each property has a large lawn, often spacious units, and long term residents.</p>
-		 		<img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
+		 		<div class="box-shadow">
+				<img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
+				</div>
  		     		</article>
 		<article class="col-md-2"></article>
 		</div>
