--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 		<header id="myHeader">
    			<div class="container-fluid">
 				<h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
-	 			<p style="text-align:center;">Phone +14945194219545</p>
+	 			<a href="tel:123456">Call us at 123456</a>
+
 	    	  	</div>
 		</header>
 	</div>	
