--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<header id="myHeader">
    			<div class="container-fluid">
 				<h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
-	 			<a href="tel:123456" style="text-align:center;">Call us at 123456</a>
+	 			<a href="tel:123456"><p style="text-align:center">Call us at 123456</p></a>
 
 	    	  	</div>
 		</header>
