--- a/index.html
+++ b/index.html
@@ -58,14 +58,16 @@
 	   			<div class="box-shadow">
 				<img class="img-fluid" class="img-responsive" src="images/apt1.jpg">
 	    			</div>
-     				<p id="c">2801 W Atkinson St - 2 bedroom</p>
+     				<p id="c"><strong>2801 W Atkinson St </strong> 
+					2 bedroom</p>
     			</article>
 			<article class="col-md-2"></article>
     			<aside class="col-md-4">
 	    			<div class="box-shadow">
 	    				<img class="img-fluid" class="img-responsive" src="images/apt2.jpg">
 	    			</div>
-				<p id="c">2901 W Atkinson St - Studio, 1 Bedroom</p>   
+				<p id="c"><strong>2901 W Atkinson St </strong>
+					 Studio, 1 Bedroom</p>   
 	 		</aside>
 	    	<article class="col-md-1"></article>
  		</div>
@@ -78,14 +80,16 @@
 	    			<div class="box-shadow">
 					<img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
 	   			 </div>
-      				<p id="c">4446 N 28th St - Studio, 1 Bedroom, 2 Bedroom</p>
+      				<p id="c"><strong>4446 N 28th St</strong>
+				 Studio, 1 Bedroom, 2 Bedroom</p>
     			</article>
 	    		<article class="col-md-2"></article>
     			<aside class="col-md-4">
 	   			<div class="box-shadow">
 	    				<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
 	   			 </div>
-				 <p id="c">4505 N 29th St - 1 Bedroom, 2 Bedroom</p>   
+				 <p id="c"><strong>4505 N 29th St</strong>
+					 1 Bedroom, 2 Bedroom</p>   
 	  		</aside>
 	    		<article class="col-md-1"></article>
   		</div>
