--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<img class="img-fluid" class="img-responsive" src="images/apt1.jpg">
 	    			</div>
      				<p id="c"><strong>2801 W Atkinson St </strong></p>
-					<p id="c">2 bedroom</p>
+					<p>2 bedroom</p>
     			</article>
 			<article class="col-md-2"></article>
     			<aside class="col-md-4">
@@ -67,7 +67,7 @@
 	    				<img class="img-fluid" class="img-responsive" src="images/apt2.jpg">
 	    			</div>
 				<p id="c"><strong>2901 W Atkinson St </strong></p>
-					<p id="c"> Studio, 1 Bedroom</p>   
+					<p> Studio, 1 Bedroom</p>   
 	 		</aside>
 	    	<article class="col-md-1"></article>
  		</div>
@@ -81,7 +81,7 @@
 					<img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
 	   			 </div>
       				<p id="c"><strong>4446 N 28th St</strong></p>
-				<p id="c">  Studio, 1 Bedroom, 2 Bedroom</p>
+				<p>Studio, 1 Bedroom, 2 Bedroom</p>
     			</article>
 	    		<article class="col-md-2"></article>
     			<aside class="col-md-4">
@@ -89,7 +89,7 @@
 	    				<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
 	   			 </div>
 				 <p id="c"><strong>4505 N 29th St</strong></p> 
-					<p id="c"> 1 Bedroom, 2 Bedroom</p>   
+					<p> 1 Bedroom, 2 Bedroom</p>   
 	  		</aside>
 	    		<article class="col-md-1"></article>
   		</div>
