--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	
 
 	<div class="container">
-		<div class="row">
+		<div class="row" style="padding top: 200px;">
 			<article class="col-md-1"></article>
 	     		<article class="col-md-4">
 	   			<div class="box-shadow">
