--- a/index.html
+++ b/index.html
@@ -43,16 +43,38 @@
 	<div class="header">
 		<header id="myHeader">
    			<div class="container-fluid">
-				<h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
-	 			<a href="tel:123456"><p style="text-align:center">Call us at 123456</p></a>
+				<h1 class="intro-lead" style="text-align:center;">Atkinson Apartments Milwaukee Wisconsin</h1>
+				<p id="a" style="text-align:center">Milwaukee Wisconsin</p>
+				<p style="text-align:center">Call Today!</p>
+	 			<a href="tel:123456"><p style="text-align:center">(262) 232-8738 </p></a>
 
 	    	  	</div>
 		</header>
 	</div>	
 	
-
-	<div class="container">
+<div class="container">
 		<div class="row" style="padding-top: 200px;">
+			<article class="col-md-1"></article>	    	
+   			<article class="col-md-4">
+	    			<div class="box-shadow">
+					<img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
+	   			 </div>
+      				<p id="c"><strong>4446 N 28th St</strong>
+				Studio, 1 Bedroom, 2 Bedroom</p>
+    			</article>
+	    		<article class="col-md-2"></article>
+    			<aside class="col-md-4">
+	   			<div class="box-shadow">
+	    				<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
+	   			 </div>
+				 <p id="c"><strong>4505 N 29th St</strong>
+					 1 Bedroom, 2 Bedroom</p>   
+	  		</aside>
+	    		<article class="col-md-1"></article>
+  		</div>
+	</div>
+	<div class="container">
+		<div class="row" >
 			<article class="col-md-1"></article>
 	     		<article class="col-md-4">
 	   			<div class="box-shadow">
@@ -73,27 +95,7 @@
  		</div>
 	</div>
 	
-	<div class="container">
-		<div class="row">
-			<article class="col-md-1"></article>	    	
-   			<article class="col-md-4">
-	    			<div class="box-shadow">
-					<img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
-	   			 </div>
-      				<p id="c"><strong>4446 N 28th St</strong>
-				Studio, 1 Bedroom, 2 Bedroom</p>
-    			</article>
-	    		<article class="col-md-2"></article>
-    			<aside class="col-md-4">
-	   			<div class="box-shadow">
-	    				<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
-	   			 </div>
-				 <p id="c"><strong>4505 N 29th St</strong>
-					 1 Bedroom, 2 Bedroom</p>   
-	  		</aside>
-	    		<article class="col-md-1"></article>
-  		</div>
-	</div>
+	
 	
 	<div class="container">
 		<div class="row">
@@ -112,18 +114,17 @@
 <footer id="xd-footer">
 	<div class="container">
 			<div class="row justify-content-between">
-				<div class="col-md-6" style="text-align:center;">stuff goes here stuff goes here</div>
-				<div class="col-md-6" style="text-align:center;">stuff goes here stuff goes here</div>
+				<div class="col-md-6" style="text-align:center;">Apartments in Milwaukee Wisconsin on Atkinson Street. Units include studios, 1 bedroom, and 2 bedroom sizes.</div>
+				<div class="col-md-6" style="text-align:center;">Management Company https://smartassetrealty.com/</div>
 			</div>
 		</div>
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-2" style="text-align:center;">Copyright</div>
+				<div class="col-2" style="text-align:center;">Copyright KMD Holdings LLC <year></div>
 				</div>
 		</div>
 </footer>
 
-<script src="https://code.jquery.com/jquery-latest.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
  
 <script>
