--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		</div>
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-2" style="text-align:center;">Copyright KMD Holdings LLC <year></div>
+				<div class="col-2" style="text-align:center;">Copyright KMD Holdings LLC <script>document.write(new Date().getFullYear())</script></div>
 				</div>
 		</div>
 </footer>
