--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<h1 class="intro-lead" style="text-align:center;">Atkinson Apartments Milwaukee Wisconsin</h1>
 				<p id="a" style="text-align:center">Milwaukee Wisconsin</p>
 				<p style="text-align:center">Call Today!</p>
-	 			<a href="tel:123456"><p style="text-align:center">(262) 232-8738 </p></a>
+	 			<a href="tel:2622328738"><p style="text-align:center">(262) 232-8738 </p></a>
 
 	    	  	</div>
 		</header>
@@ -114,8 +114,8 @@
 <footer id="xd-footer">
 	<div class="container">
 			<div class="row justify-content-between">
-				<div class="col-md-6" style="text-align:center;">Apartments in Milwaukee Wisconsin on Atkinson Street. Units include studios, 1 bedroom, and 2 bedroom sizes.</div>
-				<div class="col-md-6" style="text-align:center;">Management Company https://smartassetrealty.com/</div>
+				<div class="col-md-4" style="text-align:center;">Apartments in Milwaukee Wisconsin on Atkinson Street. Units include studios, 1 bedroom, and 2 bedroom sizes.</div>
+				<div class="col-md-4" style="text-align:center;">Management Company <a href="https://smartassetrealty.com/"><p style="color: white;">https://smartassetrealty.com/</p></a></div>
 			</div>
 		</div>
 		<div class="container">
