--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 	    			<div class="box-shadow">
 					<img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
 	   			 </div>
-      				<p id="c"><strong>4446 N 28th St</strong>
-				Studio, 1 Bedroom, 2 Bedroom</p>
+				<div><strong>4446 N 28th St</strong></div>
+				<div>Studio, 1 Bedroom, 2 Bedroom</div>
     			</article>
 	    		<article class="col-md-2"></article>
     			<aside class="col-md-4">
