--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	    			<div class="box-shadow">
 					<img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
 	   			 </div>
-				<div><strong>4446 N 28th St</strong></div>
+				<div id="d"><strong>4446 N 28th St</strong></div>
 				<div>Studio, 1 Bedroom, 2 Bedroom</div>
     			</article>
 	    		<article class="col-md-2"></article>
@@ -67,8 +67,8 @@
 	   			<div class="box-shadow">
 	    				<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
 	   			 </div>
-				 <p id="c"><strong>4505 N 29th St</strong>
-					 1 Bedroom, 2 Bedroom</p>   
+				 <div id="d"><strong>4505 N 29th St</strong></div>
+					 <div>1 Bedroom, 2 Bedroom</div>   
 	  		</aside>
 	    		<article class="col-md-1"></article>
   		</div>
@@ -80,16 +80,16 @@
 	   			<div class="box-shadow">
 				<img class="img-fluid" class="img-responsive" src="images/apt1.jpg">
 	    			</div>
-     				<p id="c"><strong>2801 W Atkinson St </strong>
-					2 bedroom</p>
+     				<div id="d"><strong>2801 W Atkinson St</strong> </div>
+					<div>2 bedroom</div>
     			</article>
 			<article class="col-md-2"></article>
     			<aside class="col-md-4">
 	    			<div class="box-shadow">
 	    				<img class="img-fluid" class="img-responsive" src="images/apt2.jpg">
 	    			</div>
-				<p id="c"><strong>2901 W Atkinson St </strong>
-					 Studio, 1 Bedroom</p>   
+				<div id="d"><strong>2901 W Atkinson St </strong></div>
+					<div> Studio, 1 Bedroom</div>   
 	 		</aside>
 	    	<article class="col-md-1"></article>
  		</div>
