--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   		</div>
 	</div>
 	<div class="container">
-		<div class="row" >
+		<div class="row" style="margin-top: 35px;" >
 			<article class="col-md-1"></article>
 	     		<article class="col-md-4">
 	   			<div class="box-shadow">
