--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<article class="col-md-1"></article>	    	
    			<article class="col-md-4">
 	    			<div class="box-shadow">
-					<img class="img-fluid" class="img-responsive" src="images/apt3.jpg">
+					<img class="img-fluid" class="img-responsive" style="margin-top: 35px;" src="images/apt3.jpg">
 	   			 </div>
 				<div id="d"><strong>4446 N 28th St</strong></div>
 				<div>Studio, 1 Bedroom, 2 Bedroom</div>
@@ -65,7 +65,7 @@
 	    		<article class="col-md-2"></article>
     			<aside class="col-md-4">
 	   			<div class="box-shadow">
-	    				<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
+	    				<img class="img-fluid" class="img-responsive" style="margin-top: 35px;" src="images/apt4.jpg">
 	   			 </div>
 				 <div id="d"><strong>4505 N 29th St</strong></div>
 					 <div>1 Bedroom, 2 Bedroom</div>   
@@ -74,11 +74,11 @@
   		</div>
 	</div>
 	<div class="container">
-		<div class="row" style="margin-top: 35px;" >
+		<div class="row">
 			<article class="col-md-1"></article>
 	     		<article class="col-md-4">
 	   			<div class="box-shadow">
-				<img class="img-fluid" class="img-responsive" src="images/apt1.jpg">
+				<img class="img-fluid" class="img-responsive" style="margin-top: 35px;" src="images/apt1.jpg">
 	    			</div>
      				<div id="d"><strong>2801 W Atkinson St</strong> </div>
 					<div>2 bedroom</div>
@@ -86,7 +86,7 @@
 			<article class="col-md-2"></article>
     			<aside class="col-md-4">
 	    			<div class="box-shadow">
-	    				<img class="img-fluid" class="img-responsive" src="images/apt2.jpg">
+	    				<img class="img-fluid" class="img-responsive" style="margin-top: 35px;" src="images/apt2.jpg">
 	    			</div>
 				<div id="d"><strong>2901 W Atkinson St </strong></div>
 					<div> Studio, 1 Bedroom</div>   
