--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
 <div class="container">
 		<div class="row" style="padding-top: 200px;">
 			<article class="col-md-1"></article>	    	
-   			<article class="col-md-4">
+   			<article class="col-md-4" style="margin-top: 35px;">
 	    			<div class="box-shadow">
-					<img class="img-fluid" class="img-responsive" style="margin-top: 35px;" src="images/apt3.jpg">
+					<img class="img-fluid" class="img-responsive"  src="images/apt3.jpg">
 	   			 </div>
 				<div id="d"><strong>4446 N 28th St</strong></div>
 				<div>Studio, 1 Bedroom, 2 Bedroom</div>
     			</article>
 	    		<article class="col-md-2"></article>
-    			<aside class="col-md-4">
+    			<aside class="col-md-4" style="margin-top: 35px;">
 	   			<div class="box-shadow">
-	    				<img class="img-fluid" class="img-responsive" style="margin-top: 35px;" src="images/apt4.jpg">
+	    				<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
 	   			 </div>
 				 <div id="d"><strong>4505 N 29th St</strong></div>
 					 <div>1 Bedroom, 2 Bedroom</div>   
@@ -76,17 +76,17 @@
 	<div class="container">
 		<div class="row">
 			<article class="col-md-1"></article>
-	     		<article class="col-md-4">
+	     		<article class="col-md-4" style="margin-top: 35px;" >
 	   			<div class="box-shadow">
-				<img class="img-fluid" class="img-responsive" style="margin-top: 35px;" src="images/apt1.jpg">
+				<img class="img-fluid" class="img-responsive"  src="images/apt1.jpg">
 	    			</div>
      				<div id="d"><strong>2801 W Atkinson St</strong> </div>
 					<div>2 bedroom</div>
     			</article>
 			<article class="col-md-2"></article>
-    			<aside class="col-md-4">
+    			<aside class="col-md-4" style="margin-top: 35px;">
 	    			<div class="box-shadow">
-	    				<img class="img-fluid" class="img-responsive" style="margin-top: 35px;" src="images/apt2.jpg">
+	    				<img class="img-fluid" class="img-responsive"  src="images/apt2.jpg">
 	    			</div>
 				<div id="d"><strong>2901 W Atkinson St </strong></div>
 					<div> Studio, 1 Bedroom</div>   
