--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 		<div class="row">
 			<article class="col-md-2"></article>
 			<article class="col-md-8">
+				<div><strong>Atkinson Street</strong></div>
+				<div><strong>Milwaukee Wisconsin</strong></div>
+				<div><strong>Description</strong></div>
 				<p id="c"> All buildings are some of the nicest in the neighborhood, featuring security systems, on site managers, and daily upkeep. Each property has a large lawn, often spacious units, and long term residents.</p>
 		 		<div class="box-shadow">
 				<img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
