--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 	
 	
 	<div class="container">
-		<div class="row" style="margin-top: 45px;">
+		<div class="row" style="margin-top: 50px;" style="text-align:center;">
 			<article class="col-md-2"></article>
 			<article class="col-md-8">
-				<div><strong style="text-align:center;">Atkinson Street</strong></div>
-				<div><strong style="text-align:center;">Milwaukee Wisconsin</strong></div>
+				<div><strong>Atkinson Street</strong></div>
+				<div><strong>Milwaukee Wisconsin</strong></div>
 				<p id="c"> <strong>Description:</strong> All buildings are some of the nicest in the neighborhood, featuring security systems, on site managers, and daily upkeep. Each property has a large lawn, often spacious units, and long term residents.</p>
 		 		<div class="box-shadow">
 				<img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
