--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Atkinson Apartments</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Atkinson Apartments" />
-		<meta name="keywords" content="Atkinson, Apartments" />
+		<meta name="description" content="Atkinson Apartments Milwaukee Wisconsin" />
+		<meta name="keywords" content="Atkinson, Apartments, Milwaukee, Wisconsin" />
 	
 
   		<!-- Facebook and Twitter integration -->
