--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<div class="header">
 		<header id="myHeader">
    			<div class="container-fluid">
-				<h1 class="intro-lead" style="text-align:center;">Atkinson Apartments Milwaukee Wisconsin</h1>
+				<h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
 				<p id="a" style="text-align:center">Milwaukee Wisconsin</p>
 				<p style="text-align:center">Call Today!</p>
 	 			<a href="tel:2622328738"><p style="text-align:center">(262) 232-8738 </p></a>
