--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Atkinson Apartments</title>
+		<title>Atkinson Apartments Milwaukee Wisconsin</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Atkinson Apartments Milwaukee Wisconsin" />
 		<meta name="keywords" content="Atkinson, Apartments, Milwaukee, Wisconsin" />
