--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<article class="col-md-8">
 				<p id="c"> <strong>Description:</strong> All buildings are some of the nicest in the neighborhood, featuring security systems, on site managers, and daily upkeep. Each property has a large lawn, often spacious units, and long term residents.</p>
 		 		<div class="box-shadow">
-					<div><strong>Atkinson Street, Milwaukee Wisconsin</strong></div>
+					<div><p style="text-align:center"><strong>Atkinson Street, Milwaukee Wisconsin</strong></div>
 				<img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
 				</div>
  		     		</article>
