--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
    			<div class="container-fluid">
 				<h1 class="intro-lead" style="text-align:center;">Atkinson Apartments</h1>
 				<p id="a" style="text-align:center">Milwaukee Wisconsin</p>
-				<p style="text-align:center">Call Today!</p>
+				<p id="c" style="text-align:center">Call Us Today!</p>
 	 			<a href="tel:2622328738"><p style="text-align:center">(262) 232-8738 </p></a>
 
 	    	  	</div>
