--- a/index.html
+++ b/index.html
@@ -114,14 +114,13 @@
 		
 <footer id="xd-footer">
 	<div class="container">
-			<div class="row justify-content-between">
+			<div class="row justify-content-around">
 				<div class="col-md-4" style="text-align:center;">Apartments in Milwaukee Wisconsin on Atkinson Street. Units include studios, 1 bedroom, and 2 bedroom sizes.</div>
-				<div class="col-md-4" style="text-align:center;">Management Company <a href="https://smartassetrealty.com/"><p style="color: white;">https://smartassetrealty.com/</p></a></div>
+				<div class="col-md-4" style="text-align:center;"><a href="https://smartassetrealty.com/"><p style="color: white;">Management Company</p></a></div>
 			</div>
 		</div>
 		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-2" style="text-align:center;">Copyright KMD Holdings LLC <script>document.write(new Date().getFullYear())</script></div>
+			<div style="text-align:center;">Copyright KMD Holdings LLC <script>document.write(new Date().getFullYear())</script></div>
 				</div>
 		</div>
 </footer>
