--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	</div>	
 	
 <div class="container">
-		<div class="row" style="padding-top: 160px;">
+		<div class="row" style="padding-top: 155px;">
 			<article class="col-md-1"></article>	    	
    			<article class="col-md-4" style="margin-top: 35px;">
 	    			<div class="box-shadow">
@@ -67,8 +67,8 @@
 	   			<div class="box-shadow">
 	    				<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
 	   			 </div>
-				 <div id="d" style="text-align:center;"><strong>4505 N 29th St</strong></div>
-					 <div style="text-align:center;">1 Bedroom, 2 Bedroom</div>   
+				 <div id="d"><strong>4505 N 29th St</strong></div>
+					 <div>1 Bedroom, 2 Bedroom</div>   
 	  		</aside>
 	    		<article class="col-md-1"></article>
   		</div>
@@ -80,16 +80,16 @@
 	   			<div class="box-shadow">
 				<img class="img-fluid" class="img-responsive"  src="images/apt1.jpg">
 	    			</div>
-     				<div id="d" style="text-align:center;"><strong>2801 W Atkinson St</strong> </div>
-					<div style="text-align:center;">2 bedroom</div>
+     				<div id="d"><strong>2801 W Atkinson St</strong> </div>
+					<div>2 bedroom</div>
     			</article>
 			<article class="col-md-2"></article>
     			<aside class="col-md-4" style="margin-top: 35px;">
 	    			<div class="box-shadow">
 	    				<img class="img-fluid" class="img-responsive"  src="images/apt2.jpg">
 	    			</div>
-				<div id="d" style="text-align:center;"><strong>2901 W Atkinson St </strong></div>
-					<div style="text-align:center;"> Studio, 1 Bedroom</div>   
+				<div id="d"><strong>2901 W Atkinson St </strong></div>
+					<div> Studio, 1 Bedroom</div>   
 	 		</aside>
 	    	<article class="col-md-1"></article>
  		</div>
