--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<img class="img-fluid" class="img-responsive"  src="images/apt3.jpg">
 	   			 </div>
 				<div id="d"><strong>4446 N 28th St</strong></div>
-				<div>Studio, 1 Bedroom, 2 Bedroom</div>
+				<div id="e">Studio, 1 Bedroom, 2 Bedroom</div>
     			</article>
 	    		<article class="col-md-2"></article>
     			<aside class="col-md-4" style="margin-top: 35px;">
@@ -68,7 +68,7 @@
 	    				<img class="img-fluid" class="img-responsive" src="images/apt4.jpg">
 	   			 </div>
 				 <div id="d"><strong>4505 N 29th St</strong></div>
-					 <div>1 Bedroom, 2 Bedroom</div>   
+					 <div id="e">1 Bedroom, 2 Bedroom</div>   
 	  		</aside>
 	    		<article class="col-md-1"></article>
   		</div>
@@ -81,7 +81,7 @@
 				<img class="img-fluid" class="img-responsive"  src="images/apt1.jpg">
 	    			</div>
      				<div id="d"><strong>2801 W Atkinson St</strong> </div>
-					<div>2 bedroom</div>
+					<div id="e">2 bedroom</div>
     			</article>
 			<article class="col-md-2"></article>
     			<aside class="col-md-4" style="margin-top: 35px;">
@@ -89,7 +89,7 @@
 	    				<img class="img-fluid" class="img-responsive"  src="images/apt2.jpg">
 	    			</div>
 				<div id="d"><strong>2901 W Atkinson St </strong></div>
-					<div> Studio, 1 Bedroom</div>   
+					<div id="e"> Studio, 1 Bedroom</div>   
 	 		</aside>
 	    	<article class="col-md-1"></article>
  		</div>
