--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 		<div class="row" style="margin-top: 50px;">
 			<article class="col-md-2"></article>
 			<article class="col-md-8">
-				<p id="c"> <strong>Description:</strong> All buildings are some of the nicest in the neighborhood, featuring security systems, on site managers, and daily upkeep. Each property has a large lawn, often spacious units, and long term residents.</p>
+				<div id="d"> <strong>Description:</strong> </div>
+					<div id="e"> All buildings are some of the nicest in the neighborhood, featuring security systems, on site managers, and daily upkeep. Each property has a large lawn, often spacious units, and long term residents.</div>
 		 		<div class="box-shadow">
 					<div><p style="text-align:center"><strong>Atkinson Street, Milwaukee Wisconsin</strong></div>
 				<img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
