--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div id="d"> <strong>Description:</strong> </div>
 					<div id="e"> All buildings are some of the nicest in the neighborhood, featuring security systems, on site managers, and daily upkeep. Each property has a large lawn, often spacious units, and long term residents.</div>
 		 		<div class="box-shadow">
-					<div><p style="text-align:center"><strong>Atkinson Street, Milwaukee Wisconsin</strong></div>
+					<div id="d"><strong>Atkinson Street, Milwaukee Wisconsin</div>
 				<img class="img-fluid" class="img-responsive" src="images/gmaps.jpg">
 				</div>
  		     		</article>
