--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		<div class="row" style="margin-top: 50px;">
 			<article class="col-md-2"></article>
 			<article class="col-md-8">
-				<div id="d"> <strong>Description:</strong> </div>
+				<div id="d"> <strong>Description</strong> </div>
 					<div id="e"> All buildings are some of the nicest in the neighborhood, featuring security systems, on site managers, and daily upkeep. Each property has a large lawn, often spacious units, and long term residents.</div>
 		 		<div class="box-shadow">
 					<div id="d"><strong>Atkinson Street, Milwaukee Wisconsin</strong></div>
@@ -121,7 +121,7 @@
 			</div>
 		</div>
 		<div class="container">
-			<div style="text-align:center;">Copyright KMD Holdings LLC <script>document.write(new Date().getFullYear())</script></div>
+			<div id="f">Copyright KMD Holdings LLC <script>document.write(new Date().getFullYear())</script></div>
 				</div>
 		</div>
 </footer>
