--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
 	<div class="container">
 			<div class="row justify-content-around">
 				<div class="col-md-4" style="text-align:center;">Apartments in Milwaukee Wisconsin on Atkinson Street. Units include studios, 1 bedroom, and 2 bedroom sizes.</div>
-				<div class="col-md-4" style="text-align:center;"><a href="https://smartassetrealty.com/"><p style="color: white;">Management Company</p></a></div>
+				<div class="col-md-4" style="text-align:center;">
+					<a href="https://smartassetrealty.com/"><p style="color: white;">Management Company</p></a>
+					<a href="https://smartassetrealty.com/contact-us/"><p style="color: white;">Contact Us</p></a>
+				</div>
 			</div>
 		</div>
 		<div class="container">
